--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "firebase": "^10.14.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
