--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
